<resources>
    <string name="app_name">Match</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="dialog_prompt">提示</string>
    <string name="dialog_prompt_no">暂无可提现余额</string>
    <string name="dialog_prompt_yes">确定</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_find">发现</string>
    <string name="xc">删除</string>
    <string name="xg">修改</string>
    <string name="tab_notice">公告</string>
    <string name="tab_group">群组</string>
    <string name="group_members">群成员</string>
    <string name="tab_mine">我的</string>
    <string name="company">公司：</string>
    <string name="money">金额：</string>
    <string name="term">期限：</string>
    <string name="collaborative_work">申请协同作业</string>
    <string name="milepost">查看里程碑</string>
    <string name="milepost_details">里程碑详情</string>
    <string name="companya">公司</string>
    <string name="province">省份</string>
    <string name="city">地市</string>
    <string name="type">项目类型</string>
    <string name="nature">企业性质</string>
    <string name="amount">项目金额</string>
    <string name="terma">期限</string>
    <string name="trust">增信措施</string>
    <string name="corporation">担保公司</string>
    <string name="rating">项目评级</string>
    <string name="main_rating">主体评级</string>
    <string name="evaluation_value">评估价值</string>
    <string name="introduce">介绍</string>
    <string name="bond_rating">债券评级</string>
    <string name="add_money">添加资金用途+</string>
    <string name="add_use_money">资金用途</string>
    <string name="add_company">北京--公司</string>
    <string name="add_province">请选择您所在的省份</string>
    <string name="add_city">请选择您所在的地市</string>
    <string name="add_type">请选择项目类型</string>
    <string name="add_bature">请选择企业性质</string>
    <string name="add_mn">请输入项目金额</string>
    <string name="add_term">请选择期限</string>
    <string name="add_trust">请选择增信措施</string>
    <string name="add_guarantee">请输入担保公司名称</string>
    <string name="add_grade">请输入项目评级</string>
    <string name="add_subject">请输入主题评级</string>
    <string name="add_value">请输入评估价值</string>
    <string name="add_introduce">请填写介绍</string>
    <string name="add_yn">是/否</string>
    <string name="add_government">哪一级政府</string>
    <string name="add_explain">其他说明</string>
    <string name="add_rating">请选择债券评级</string>
    <string name="add_comprehensive">综合成本</string>
    <string name="pop_ok">完成</string>
    <string name="submit">提交</string>
    <string name="choise_city">请选择地区</string>
    <string name="project_introduction">项目介绍</string>
    <string name="company_address">公司地址</string>
    <string name="position_information">公司地理位置信息</string>
    <string name="plesea_position_information">请输入项目介绍</string>
    <string name="plesea_company_address">请输入公司地址</string>
    <string name="project_picture">项目图片</string>
    <string name="photo_graph">拍照</string>
    <string name="photo_choose">从手机相册选取</string>
    <string name="photo_cancel">取消</string>
    <string name="look">查看附件</string>
    <string name="project_name">文件名字</string>
    <string name="look_details">下载</string>
    <string name="close">申请关闭</string>
    <string name="updata">更新里程碑</string>
    <string name="modify">修改项目</string>
    <string name="select_file">选择文件</string>
    <string name="upload">上传</string>
    <string name="img">头像</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="user">身份</string>
    <string name="nm">公司名称</string>
    <string name="post">公司职务</string>
    <string name="role">协同角色</string>

    <string name="fx">分享到</string>
    <string name="wx_friend">微信好友</string>
    <string name="friend">朋友圈</string>
    <string name="xl">新浪微博</string>
    <string name="qqk">QQ空间</string>
    <string name="qq">QQ</string>



</resources>
