<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/ds_15"
    android:paddingTop="@dimen/ds_15">

    <LinearLayout style="@style/BottomTabItemLayout">

        <TextView
            android:id="@+id/tv_tab_recommend"
            style="@style/BottomTabItemText"
            android:text="@string/tab_recommend" />
    </LinearLayout>
    <LinearLayout style="@style/BottomTabItemLayout">

        <TextView
            android:id="@+id/tv_tab_find"
            style="@style/BottomTabItemText"
            android:text="@string/tab_find" />
    </LinearLayout>


    <LinearLayout style="@style/BottomTabItemLayout">

        <TextView
            android:id="@+id/tv_tab_notice"
            style="@style/BottomTabItemText"
            android:text="@string/tab_notice" />
    </LinearLayout>


    <LinearLayout style="@style/BottomTabItemLayout">
        <FrameLayout
            style="@style/BottomTabItemText">

        <TextView
            android:id="@+id/tv_tab_group"
            style="@style/BottomTabItemText"
            android:text="@string/tab_group" />
            <TextView
                android:id="@+id/tab_img"
                android:visibility="gone"
                android:text=""
                android:layout_width="@dimen/ds_45"
                android:layout_height="@dimen/ds_45"
                android:textSize="@dimen/fs_30"
                android:gravity="center"
                android:textColor="@color/color_ff"
                android:background="@drawable/red_yuan"
                android:layout_marginLeft="@dimen/ds_80"/>
        </FrameLayout>
    </LinearLayout>


    <LinearLayout style="@style/BottomTabItemLayout">

        <TextView
            android:id="@+id/tv_tab_mine"
            style="@style/BottomTabItemText"
            android:text="@string/tab_mine" />
    </LinearLayout>


</LinearLayout>
