<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_cc"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:id="@+id/img_rel"
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_350">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/img"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_img"
                android:layout_width="@dimen/ds_200"
                android:layout_height="@dimen/ds_200"
                android:layout_marginRight="@dimen/fs_40"
                android:layout_gravity="center"
                android:background="@drawable/morenxdpi_03"/>
            <ImageView
                android:layout_width="@dimen/ds_20"
                android:layout_height="@dimen/ds_40"
                android:layout_marginRight="@dimen/fs_40"
                android:layout_gravity="center"
                android:background="@drawable/right"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:id="@+id/name_rel"
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/name"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/fs_20"
            android:textColor="@color/color_99"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text=""/>
            <ImageView
                android:layout_width="@dimen/ds_20"
                android:layout_height="@dimen/ds_40"
                android:layout_marginRight="@dimen/fs_40"
                android:layout_gravity="center"
                android:background="@drawable/right"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_2"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/phone"/>

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fs_40"
            android:textColor="@color/color_99"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text=""/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_2"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/user"/>

        <TextView
            android:id="@+id/user_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fs_40"
            android:textColor="@color/color_99"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text=""/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_40"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/nm"/>

        <TextView
            android:id="@+id/nm_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fs_40"
            android:textColor="@color/color_99"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text=""/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_2"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/post"/>

        <TextView
            android:id="@+id/post_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fs_40"
            android:textColor="@color/color_99"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text=""/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_2"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_ff"
        android:layout_height="@dimen/ds_150">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_00"
            android:layout_marginLeft="@dimen/fs_40"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text="@string/role"/>

        <TextView
            android:id="@+id/role_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fs_40"
            android:textColor="@color/color_99"
            android:gravity="center"
            android:textSize="@dimen/fs_45"
            android:text=""/>
    </RelativeLayout>

</LinearLayout>
