<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:id="@+id/pd_tv01"
                    android:text="@string/collaborative_work"
                    style="@style/button_click"
                    />
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:layout_marginRight="@dimen/ds_40"
                    android:id="@+id/pd_tv02"
                    android:text="@string/milepost"
                    style="@style/button_click"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ds_200"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:text="@string/companya"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et01"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_130"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:text="@string/province"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et02"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_130"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/city"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et03"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_130"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/type"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et04"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/nature"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et05"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/amount"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et06"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/terma"
                    android:textSize="@dimen/fs_45"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et07"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_130"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/trust"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et08"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/corporation"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et09"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:text="@string/rating"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et10"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds_40"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_60"
                    android:text="@string/rating"
                    android:textSize="@dimen/fs_45"
                    android:textColor="@color/color_33"/>

                <TextView
                    android:id="@+id/et11"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/ds_60"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/ds_150"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/ds_40"
                    android:background="@drawable/text_gray"
                    android:text="111"
                    android:paddingLeft="@dimen/ds_40"
                    />
            </LinearLayout>


<TextView
    android:id="@+id/tv_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/navi"
    android:textSize="@dimen/fs_45"
    android:text="项目资金用途1"/>




        </LinearLayout>
    </ScrollView>

</LinearLayout>
